--- a/_includes/dashboard-industries-nav.html
+++ b/_includes/dashboard-industries-nav.html
@@ -1,5 +1,5 @@
-<div class="navbar navbar-inverse navbar-fixed-top navbar-industries" role="navigation" 
-  style="background-color:{{page.background_color}}; border-color:{{page.background_color}}; color:{{page.foreground_color}};">
+<div class="navbar navbar-inverse navbar-fixed-top navbar-industries" role="navigation"
+  style="background-color:{{page.background_color}}; border-color:{{page.foreground_color}}; color:{{page.foreground_color}};">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -13,12 +13,12 @@
       </a>
       <a class="navbar-brand" href="/dashboards">
         <h1 class="dash-title">{{page.industry | capitalize}} Dashboard</h1>
-      </a>      
+      </a>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-left">
-        <li><a href="https://plot.ly/organize/home">Sign up</a></li> 
-        <li><a href="https://plot.ly/products/cloud/">Pricing</a></li> 
+        <li><a href="https://plot.ly/organize/home">Sign up</a></li>
+        <li><a href="https://plot.ly/products/cloud/">Pricing</a></li>
         <li><a href="http://dashboards.ly/"><span class="create-dashboard-cta">Create a Dashboard</span></a></li>
       </ul>
     </div>
