--- a/all_static/css/keen-dashboards.css
+++ b/all_static/css/keen-dashboards.css
@@ -91,7 +91,7 @@ body.application hr {
 #forklink{
   font-weight: 300;
   font-family: "Open sans",verdana,arial,sans-serif;
-  font-size: 14px;  
+  font-size: 14px;
   color: white;
   text-transform: uppercase;
   text-decoration: none;
@@ -166,5 +166,130 @@ div.plotly-intro-industries{
 .create-dashboard-cta{
     border: 1px solid #444;
     border-radius: 2px;
-    padding: 4px;  
+    padding: 6px;
+}
+
+#wrap {
+  margin-top: 20px;
+  margin-left: 28.5%;
+}
+
+.phone {
+  height: 435px;
+  width: 230px;
+  border: 2px solid #698197;
+  border-radius: 50px;
+  margin-left: 60px;
+  margin-right: 60px;
+  display: inline-block;
+  text-align: center;
+}
+
+.speaker {
+  height: 7px;
+  width: 45px;
+  border-radius: 30px;
+  border: 2px solid #698197;
+  margin-top: 7%;
+  margin-left: 38.5%;
+  display: inline-block;
+}
+
+.camera {
+  height: 7px;
+  width: 7px;
+  border-radius: 50%;
+  border: 2px solid #698197;
+  margin-top: 7%;
+  margin-left: 12%;
+  display: inline-block;
+}
+
+.screen {
+  height: 76%;
+  width: 88%;
+  border: 2px solid #698197;
+  margin-top: 9%;
+  margin-bottom: 10.5%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.btn {
+  height: 5%;
+  width: 25%;
+  border-radius: 30px;
+  border: 2px solid #698197;
+  margin-top: -5.5%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#iphone .speaker {
+  height: 7px;
+  width: 45px;
+  border-radius: 30px;
+  border: 2px solid #698197;
+  margin-top: 10%;
+  margin-left: 2%;
+  display: inline-block;
+}
+
+#iphone .camera {
+  height: 7px;
+  width: 7px;
+  border-radius: 50%;
+  border: 2px solid #698197;
+  margin-top: 10%;
+  margin-left: 31%;
+  display: inline-block;
+}
+
+#iphone .screen {
+  height: 73%;
+  width: 88%;
+  border: 2px solid #698197;
+  margin-top: 9%;
+  margin-bottom: 10.5%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#iphone .btn {
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  border: 2px solid #698197;
+  margin-top: -7%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#credit {
+  position: absolute;
+  font-family: sans-serif;
+  font-size: 12px;
+  color: #698197;
+  margin-top: 70px;
+  left: 20px;
+}
+
+a,
+a:visited {
+  text-decoration: none;
+  color: #698197;
+}
+
+a:focus,
+a:hover {
+  color: #256097;
+}
+
+@media only screen and (max-width: 600px) {
+    .create-dashboard-cta {
+        display: none;
+    }
+    .navbar-nav .navbar-left > li > a {
+        display: none;
+    }
 }
