--- a/_includes/dashboards-preamble.html
+++ b/_includes/dashboards-preamble.html
@@ -11,13 +11,15 @@
                 <li>Plotly dashboards work in a web browser or your phone. Never download or install anything.</li>
             </ul>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6" style="text-align:center;">
           <div id="wrap">
             <div class="phone" id="iphone">
               <div class="camera"></div>
               <div class="speaker"></div>
-              <div class="screen">
-
+              <div class="screen" style="overflow:hidden;">
+                <video preload="auto" loop="loop" autoplay="" width="100%">
+                    <source src="https://images.plot.ly/background-images/iphone-screencast.mp4" type="video/mp4">
+                </video>
               </div>
               <div class="btn"></div>
             </div>
