--- a/all_static/css/keen-dashboards.css
+++ b/all_static/css/keen-dashboards.css
@@ -117,50 +117,9 @@ body.application hr {
   letter-spacing: 0.05rem;
 }
 
-.navbar-industries .navbar-nav{
-  position: absolute;
-  right: 20px;
-}
-
-.navbar-industries li{
-  float: right !important;
-}
-
-.navbar-industries #forklink{
-  color: inherit;
-}
-
 .btn{
   border: 0px;
   border-radius: 0px;
-}
-
-div.plotly-intro-industries{
-    width: 80%;
-    background-color: white;
-    padding: 20px;
-    margin: 20px;
-    border-radius: 5px;
-    color: #444;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 800px;
-    text-align: center;
-}
-
-.plotly-intro-industries h4{
-    color: #888;
-    font-weight: 200;
-    letter-spacing: 0.01rem !important;
-    line-height: 24px;
-}
-
-.plotly-intro-industries ul{
-    list-style: circle inside;
-    line-height: 1.6;
-    font-weight: 200;
-    letter-spacing: 0.1rem;
 }
 
 .create-dashboard-cta{
@@ -171,7 +130,6 @@ div.plotly-intro-industries{
 
 #wrap {
   margin-top: 20px;
-  margin-left: 28.5%;
 }
 
 .phone {
@@ -213,6 +171,7 @@ div.plotly-intro-industries{
   margin-bottom: 10.5%;
   margin-left: auto;
   margin-right: auto;
+  overflow: hidden;
 }
 
 .btn {
@@ -285,11 +244,8 @@ a:hover {
   color: #256097;
 }
 
-@media only screen and (max-width: 600px) {
-    .create-dashboard-cta {
-        display: none;
-    }
-    .navbar-nav .navbar-left > li > a {
+@media screen and (max-width: 600px) {
+    .navbar-right{
         display: none;
     }
 }
