--- a/_includes/dashboard-industries-nav.html
+++ b/_includes/dashboard-industries-nav.html
@@ -11,15 +11,15 @@
       <a class="navbar-brand" href="/dashboards">
         <span class="glyphicon glyphicon-chevron-left"></span>
       </a>
-      <a class="navbar-brand" href="/dashboards">
+      <a class="navbar-brand" href="/dashboards" style="background-color:{{page.background_color}};z-index:99">
         <h1 class="dash-title">{{page.industry | capitalize}} Dashboard</h1>
       </a>
     </div>
     <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav navbar-left">
+      <ul class="nav navbar-nav navbar-right">
         <li><a href="https://plot.ly/organize/home">Sign up</a></li>
         <li><a href="https://plot.ly/products/cloud/">Pricing</a></li>
-        <li><a href="http://dashboards.ly/"><span class="create-dashboard-cta">Create a Dashboard</span></a></li>
+        <li><a href="http://dashboards.ly/"><span class="create-dashboard-cta" style="border-color:{{page.foreground_color}};">Create a Dashboard</span></a></li>
       </ul>
     </div>
   </div>
