update to new schema structure

--- a/_includes/plotschema-reference.html
+++ b/_includes/plotschema-reference.html
@@ -1,6 +1,6 @@
 {% capture plotschemacontent %}
 
-{% for trace in site.data.plotschema.traces %}
+{% for trace in site.data.plotschema.schema.traces %}
 
 <div class="row">
     <div class="eight columns">
@@ -33,7 +33,7 @@
         {% assign display_info = true %}
         {% assign toc = false %}
         {% assign block = "data" %}
-        {% include reference-block.html parentlink=localparentlink block=block %}        
+        {% include reference-block.html parentlink=localparentlink block=block %}
     </div>
 
     <div class="four columns">
@@ -47,7 +47,7 @@
             {% include reference-block.html parentlink=localparentlink block=block %}
         </div>
     </div>
-        
+
 </div>
 <hr>
 
@@ -60,10 +60,10 @@
         {% assign display_info = true %}
         {% assign toc = false %}
         {% assign block = "data" %}
-        
+
         <a id="layout" href="#layout"><h4>layout</h4></a>
         {% assign localparentlink="layout" %}
-        {% assign attribute=site.data.plotschema.layout.layoutAttributes %}
+        {% assign attribute=site.data.plotschema.schema.layout.layoutAttributes %}
         {% assign block = "layout" %}
         {% include reference-block.html parentlink=localparentlink block=block %}
     </div>
@@ -73,13 +73,13 @@
         {% assign display_info = false %}
         {% assign toc = true %}
         {% assign block = "data" %}
-            
+
         <a id="layout" href="#layout"><h4>layout</h4></a>
         {% assign localparentlink="layout" %}
-        {% assign attribute=site.data.plotschema.layout.layoutAttributes %}
+        {% assign attribute=site.data.plotschema.schema.layout.layoutAttributes %}
         {% assign block = "layout" %}
         {% include reference-block.html parentlink=localparentlink block=block %}
-    </div>        
+    </div>
 </div>
 
 {% endcapture %}
