--- a/_includes/reference-block.html
+++ b/_includes/reference-block.html
@@ -66,7 +66,7 @@
                         {% endif %}
                     {% else %}
                         {% assign typekey = obj[1].valType %}
-                        (<code tooltip="{{site.data.plotschema.defs.valObjects[typekey].description}}" class="attribute-type">{{ obj[1].valType }}</code>)
+                        (<code tooltip="{{site.data.plotschema.schema.defs.valObjects[typekey].description}}" class="attribute-type">{{ obj[1].valType }}</code>)
                     {% endif %}
                     {% if obj[1].role == "object" %}
                         {% if obj[1].items %}
