--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -30,6 +30,7 @@
 
 	<div class="allcontent">
 		
+		{% include search-suggestions.html %}
 
 		<div class="sectionseparator_bg">
 			<div class="bigcontainer">
