--- a/_includes/search-suggestions.html
+++ b/_includes/search-suggestions.html
@@ -1,9 +1,7 @@
-{% if page.plottype %}
+{% if page.plottype != null %}
 
 {% if page.language == "plotly_js" %}
     {% assign extension = "js" %}
-{% elsif page.language == "r" %}
-    {% assign extension = "r" %}
 {% elsif page.language == "python" %}    
     {% assign extension = "py" %}
 {% endif %}    
