--- a/_includes/search-suggestions.html
+++ b/_includes/search-suggestions.html
@@ -11,9 +11,9 @@
     margin-bottom: -50px;
     border-left: 5px solid #ccc;
     padding-left: 20px;">
-    Pssst... Need more {{ page.language | replace:'_','.' }} examples?<br>
-    <a href="target='blank" href="https://plot.ly/feed/?q=plottype:{{page.plottype}}"><i class="icon-search"></i> Search for surface plots on Plotly's feed</a> 
-    and append "<span style="color:red;">.{{extension}}</span>" to get the {{ page.language | replace:'_','.' }} code. <br>
+    Pssst... Want more advanced {{page.plottype}} examples in {{ page.language | replace:'_','.' }}?<br>
+    <a target="blank" href="https://plot.ly/feed/?q=plottype:{{page.plottype}}"><i class="icon-search"></i> Search for {{page.plottype}} on Plotly's feed</a> 
+    and append "<span style="color:red;">.{{extension}}</span>" to the plot URL to get the {{ page.language | replace:'_','.' }} code. <br>
     <small>https://plot.ly/~empet/6640 → https://plot.ly/~empet/6640<span style="color:red;">.{{extension}}</span></small>
 </h6>
 {% endif %}
