--- a/_includes/search-suggestions.html
+++ b/_includes/search-suggestions.html
@@ -8,12 +8,11 @@
 
 <h6 style="
     margin: 100px;
-    margin-bottom: -50px;
+    margin-bottom: 0px;
     border-left: 5px solid #ccc;
     padding-left: 20px;">
-    Pssst... Want more advanced {{page.plottype}} examples in {{ page.language | replace:'_','.' }}?<br>
-    <a target="blank" href="https://plot.ly/feed/?q=plottype:{{page.plottype}}"><i class="icon-search"></i> Search for {{page.plottype}} on Plotly's feed</a> 
-    and append "<span style="color:red;">.{{extension}}</span>" to the plot URL to get the {{ page.language | replace:'_','.' }} code. <br>
-    <small>https://plot.ly/~empet/6640 → https://plot.ly/~empet/6640<span style="color:red;">.{{extension}}</span></small>
+    Want more advanced {{page.plottype}} examples in {{ page.language | replace:'_','.' }}?<br>
+    <h5><a target="blank" href="https://plot.ly/feed/?q=plottype:{{page.plottype}}"><i class="icon-search"></i> Search for {{page.plottype}} on Plotly's feed</a>.</h5>
+    Append "<span style="color:red;">.{{extension}}</span>" to any plot URL to get the {{ page.language | replace:'_','.' }} code.
 </h6>
 {% endif %}
