--- a/_includes/search-suggestions.html
+++ b/_includes/search-suggestions.html
@@ -12,7 +12,7 @@
     border-left: 5px solid #ccc;
     padding-left: 20px;">
     Want more advanced {{page.plottype}} examples in {{ page.language | replace:'_','.' }}?<br>
-    <h5><a target="blank" href="https://plot.ly/feed/?q=plottype:{{page.plottype}}"><i class="icon-search"></i> Search for {{page.plottype}} on Plotly's feed</a>.</h5>
+    <p><a target="blank" href="https://plot.ly/feed/?q=plottype:{{page.plottype}}"><i class="icon-search"></i> Search for {{page.plottype}} on Plotly's feed</a>.</p>
     Append "<span style="color:red;">.{{extension}}</span>" to any plot URL to get the {{ page.language | replace:'_','.' }} code.
 </h6>
 {% endif %}
