--- a/all_static/css/keen-dashboards.css
+++ b/all_static/css/keen-dashboards.css
@@ -277,3 +277,24 @@ blockquote p {
   font-size:18px !important;
   font-weight: !important;
 }
+
+.btn-try-it-out {
+    -webkit-transition: background-color .2s ease-out;
+    -moz-transition: background-color .2s ease-out;
+    -ms-transition: background-color .2s ease-out;
+    -o-transition: background-color .2s ease-out;
+    transition: background-color .2s ease-out;
+    background: rgba(255,255,255,0.1);
+    border: 2px solid #FFF;
+    border-radius: 3px;
+    color: #FFF;
+    display: inline-block;
+    font-size: 20px;
+    font-weight: 400;
+    height: 68px;
+    line-height: 55px;
+    padding: 4px 50px;
+    text-transform: none;
+    margin: 0 10px;
+}
+}
