--- a/all_static/css/keen-dashboards.css
+++ b/all_static/css/keen-dashboards.css
@@ -278,6 +278,15 @@ blockquote p {
   font-weight: !important;
 }
 
+.dashboard-description ul{
+  font-size:18px !important;
+  font-weight: !important;  
+}
+
+.dashboard-description li{
+  margin-bottom: 20px; 
+}
+
 .btn-try-it-out {
     -webkit-transition: background-color .2s ease-out;
     -moz-transition: background-color .2s ease-out;
