--- a/_includes/dashboards-copy/sales-copy.html
+++ b/_includes/dashboards-copy/sales-copy.html
@@ -9,6 +9,11 @@
     These sales dashboards show how easy it is to create dashboards in Plotly
     that combine data from disparate tools and help sales teams focus on the prize.
 </p>
+<ul>
+    <li>Plotly works with tools that your data science team likes: R, Python, MATLAB, and Excel.</li>
+    <li>Plotly dashboards are gorgeous. They look and present better than any other dashboard platform.</li>
+    <li>Plotly dashboards work in a web browser or your phone. Never download or install anything.</li>
+</ul>
 
 {% elsif page.industry == "Marketing" %}
 
