--- a/all_static/css/keen-dashboards.css
+++ b/all_static/css/keen-dashboards.css
@@ -304,6 +304,7 @@ blockquote p {
     line-height: 55px;
     padding: 4px 50px;
     text-transform: none;
-    margin: 0 10px;
+    margin: 80px 0 40px 0;
+    text-decoration: none;
 }
-}
+
