--- a/all_static/css/keen-dashboards.css
+++ b/all_static/css/keen-dashboards.css
@@ -251,6 +251,8 @@ a:hover {
 }
 
 blockquote {
+  color: #888;
+  font-weight: 300;
   background: #f9f9f9;
   border-left: 10px solid #ccc;
   margin: 1.5em 10px;
@@ -267,6 +269,8 @@ blockquote:before {
 }
 blockquote p {
   display: inline;
+  color: #888;
+  font-weight: 300;
 }
 
 .dashboard-description h2{
