--- a/_includes/dashboard-industries-nav.html
+++ b/_includes/dashboard-industries-nav.html
@@ -31,8 +31,7 @@
             {% include dashboards-copy/sales-copy.html %}
         </div>
         <div class="col-sm-6" style="text-align:center;">
-          <br>
-          <a href="https://plotly.typeform.com/to/seG7Vb" style="color:color:{{page.foreground_color}};border-color:color:{{page.foreground_color}} !important;" class="btn-try-it-out typeform-share" data-mode="1" target="_blank" onclick="window.mixpanel.track('Typeform demo request');">Request a demo</a>
+          <a href="https://plotly.typeform.com/to/seG7Vb" style="color:{{page.background_color}};border-color:color:{{page.background_color}} !important;" class="btn-try-it-out typeform-share" data-mode="1" target="_blank" onclick="window.mixpanel.track('Typeform demo request');">Request a demo</a>
           <br>
           <div id="wrap">
             <div class="phone" id="iphone">
