--- a/_includes/dashboard-industries-nav.html
+++ b/_includes/dashboard-industries-nav.html
@@ -31,7 +31,7 @@
             {% include dashboards-copy/sales-copy.html %}
         </div>
         <div class="col-sm-6" style="text-align:center;">
-          <a href="https://plotly.typeform.com/to/seG7Vb" style="color:{{page.background_color}};border-color:color:{{page.background_color}} !important;" class="btn-try-it-out typeform-share" data-mode="1" target="_blank" onclick="window.mixpanel.track('Typeform demo request');">Request a demo</a>
+          <a href="https://plotly.typeform.com/to/seG7Vb" style="color:{{page.background_color}};border-color:{{page.background_color}} !important;" class="btn-try-it-out typeform-share" data-mode="1" target="_blank" onclick="window.mixpanel.track('Typeform demo request');">Request a demo</a>
           <br>
           <div id="wrap">
             <div class="phone" id="iphone">
@@ -51,9 +51,9 @@
         <h1 style="font-size:22px;">{{page.industry}} dashboards made easy</h1>
         <br><br>
         <p style="font-size:18px;color:{{page.foreground_color}};opacity:0.6;">
-            1. Sign up: <a href="https://plot.ly/" target="_blank">plot.ly</a><br><br>
-            2. Chart data: <a href="https://plot.ly/plot" target="_blank">plot.ly/plot</a><br><br>
-            3. Combine charts: <a href="https://dashboards.ly/" target="_blank">dashboards.ly</a>
+            1. Sign up: <a href="https://plot.ly/" target="_blank" style="color:{{page.foreground_color}};">plot.ly</a><br><br>
+            2. Chart data: <a href="https://plot.ly/plot" target="_blank" style="color:{{page.foreground_color}};">plot.ly/plot</a><br><br>
+            3. Combine charts: <a href="https://dashboards.ly/" target="_blank" style="color:{{page.foreground_color}};">dashboards.ly</a>
         </p>
     </div>
 </div>
