--- a/all_static/css/keen-dashboards.css
+++ b/all_static/css/keen-dashboards.css
@@ -274,20 +274,20 @@ blockquote p {
 }
 
 .dashboard-description h2{
+  font-weight: 300 !important;
   margin-top: 0px !important;
 }
 
 .dashboard-description p{
-  font-size:18px !important;
-  font-weight: !important;
+  font-weight: 300 !important;
 }
 
 .dashboard-description ul{
-  font-size:18px !important;
-  font-weight: !important;  
+  font-weight: 300 !important;
 }
 
 .dashboard-description li{
+  font-weight: 300 !important;  
   margin-bottom: 20px; 
 }
 
