--- a/_includes/dashboard-industries-nav.html
+++ b/_includes/dashboard-industries-nav.html
@@ -27,7 +27,7 @@
 
 <div>
     <div style="background:white;padding:60px;" class="row">
-        <div class="col-sm-6" class="dashboard-description">
+        <div class="col-sm-6 dashboard-description">
             {% include dashboards-copy/sales-copy.html %}
         </div>
         <div class="col-sm-6" style="text-align:center;">
