--- a/all_static/css/keen-dashboards.css
+++ b/all_static/css/keen-dashboards.css
@@ -275,19 +275,21 @@ blockquote p {
 
 .dashboard-description h2{
   font-weight: 300 !important;
-  margin-top: 0px !important;
 }
 
 .dashboard-description p{
   font-weight: 300 !important;
+  font-size: 18px;
 }
 
 .dashboard-description ul{
   font-weight: 300 !important;
+  font-size: 18px;
 }
 
 .dashboard-description li{
   font-weight: 300 !important;  
+  font-size: 18px;
   margin-bottom: 20px; 
 }
 
