--- a/_includes/dashboard-industries-footer.html
+++ b/_includes/dashboard-industries-footer.html
@@ -1,7 +1,11 @@
     <hr>
 
-    <p class="small text-muted">
-        <a href="http://dashboards.ly/">Create your own dashboards</a>.
+    <p class="small text-muted" style="text-align:center;">
+        <h3>
+                <a href="https://plot.ly/feed?q={{page.industry}}" target="_blank">
+                    <i class="icon-search"></i> Discover more {{page.industry}} dashboard charts on the Plotly feed
+                </a>
+        </h3>
     </p>
 
   </div>
