--- a/_includes/dashboard-industries-footer.html
+++ b/_includes/dashboard-industries-footer.html
@@ -1,6 +1,6 @@
     <hr>
 
-    <p class="small text-muted" style="text-align:center;">
+    <p style="text-align:center;">
         <h3>
                 <a href="https://plot.ly/feed?q={{page.industry}}" target="_blank">
                     <i class="icon-search"></i> Discover more {{page.industry}} dashboard charts on the Plotly feed
