--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -106,6 +106,7 @@
 
         <!-- Shiny Tutorial -->
 		{% if page.language == "r"%}
+		  <a href="{{ BASE_URL }}/{{ page.language }}/ggplot2/" class="js-splash--navigation-item">GGPlot2</a>
 		  <a href="{{ BASE_URL }}/{{ page.language }}/shiny-tutorial/" class="js-splash--navigation-item">Shiny Tutorial</a>
 		{% endif %}
 
@@ -121,6 +122,7 @@
             <a href="{{ BASE_URL }}/ipython-notebooks/" class="js-splash--navigation-item">IPython Notebooks</a>
           {% endif %}
           <a href="{{ BASE_URL }}/pandas/" class="js-splash--navigation-item">Pandas</a>
+          <a href="{{ BASE_URL }}/matplotlib/" class="js-splash--navigation-item">Matplotlib</a>
         {% endif %}
 
         <!-- Pandas Specific -->
