Added report generation and database docs to python page

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -22,7 +22,11 @@
 		{% assign statistical = true %}
 	{% elsif page.display_as == "financial" %}
 		{% assign financial = true %}
-	
+	{% elsif page.display_as == "report_generation" %}
+		{% assign report_generation = true %}
+	{% elsif page.display_as == "databases" %}
+		{% assign databases = true %}
+
 	<!-- START OF GGPLOT CUSTOM LAYOUT -->
 	{% elsif page.display_as == "aesthetics" %}
 		{% assign aesthetics = true %}
@@ -322,6 +326,44 @@
 </a>
 <div class="{% cycle 'group2-clear': '', '', 'three-column-clear' %}"></div>
 <div class="{% cycle 'group 2': '', '', 'three-column-clear', '', 'five-column-clear' %}"></div>
+{% endif %}
+{% endfor %}
+</div>
+{% endif %}
+
+{% if report_generation %}
+<hr>
+<h4 class="example-section-title" id="report-generation"><a class="no_underline plot-blue" href="#report-generation">Report Generation</a></h4>
+<div class="row">
+{% for page in languagelistimg %}
+{% if page.display_as == "report_generation" %}
+<a href="/{{page.permalink}}">
+	<div class="alltutcol">
+		<img class="thumbnail" alt="{{page.name}}" src="{{site.imgurl}}{{page.thumbnail}}" >
+		<div class="titlecenter">
+			<h5 class="centered"> {{page.name}} </h5>
+		</div>
+	</div>
+</a>
+{% endif %}
+{% endfor %}
+</div>
+{% endif %}
+
+{% if databases %}
+<hr>
+<h4 class="example-section-title" id="databases"><a class="no_underline plot-blue" href="#databases">Connecting to Databases</a></h4>
+<div class="row">
+{% for page in languagelistimg %}
+{% if page.display_as == "databases" %}
+<a href="/{{page.permalink}}">
+	<div class="alltutcol">
+		<img class="thumbnail" alt="{{page.name}}" src="{{site.imgurl}}{{page.thumbnail}}" >
+		<div class="titlecenter">
+			<h5 class="centered"> {{page.name}} </h5>
+		</div>
+	</div>
+</a>
 {% endif %}
 {% endfor %}
 </div>
