--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -53,7 +53,11 @@
 		{% assign tutorial = true %}
 	{% elsif page.display_as == "get_request" %}
 		{% assign get_request = true %}
-	
+	{% elsif page.display_as == "report_generation" %}
+		{% assign report_generation = true %}		
+	{% elsif page.display_as == "databases" %}
+		{% assign databases = true %}		
+		
 	<!-- START OF GGPLOT CUSTOM LAYOUT -->
 	{% elsif page.display_as == "aesthetics" %}
 		{% assign aesthetics = true %}
@@ -150,7 +154,9 @@
 	{% if financial == true %}<a href="#financial-charts" class="js-splash--navigation-item">Financial</a>{% endif %}
 	{% if maps == true %}<a href="#maps" class="js-splash--navigation-item">Maps</a>{% endif %}
 	{% if 3d_charts == true %}<a href="#3d-charts" class="js-splash--navigation-item">3D</a>{% endif %}
-        {% if fitting_tools == true %}<a href="#fitting-tools" class="js-splash--navigation-item">Fitting Tools</a>{% endif %}
+    {% if report_generation == true %}<a href="#report-generation" class="js-splash--navigation-item">Report Generation</a>{% endif %}
+    {% if databases == true %}<a href="#databases" class="js-splash--navigation-item">Connecting to Databases</a>{% endif %}
+    {% if fitting_tools == true %}<a href="#fitting-tools" class="js-splash--navigation-item">Fitting Tools</a>{% endif %}
 	{% if language == "matlab" or language == "python" %}
 	  <a href="#streaming" class="js-splash--navigation-item">Streaming</a>
 	{% endif %}
