Added theme examples

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -32,6 +32,8 @@
 		{% assign faceting = true %}
 	{% elsif page.display_as == "other" %}
 		{% assign other = true %}
+	{% elsif page.display_as == "theme" %}
+		{% assign theme = true %}	
 	<!-- END OF GGPLOT CUSTOM LAYOUT -->	
 	
 	{% endif %}
@@ -133,6 +135,30 @@
 <div class="row">
 {% for page in languagelistimg %}
 {% if page.display_as == "other" %}
+<a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
+  <div class="alltutcol">
+    <img class="thumbnail" alt="{{page.name}}" src="{{site.imgurl}}{{page.thumbnail}}">
+      <div class="titlecenter">
+        <h5 class="centered"> {{page.name}} </h5>
+      </div>
+  </div>
+</a>
+<div class="{% cycle 'basic-three-clear': '', '', 'three-column-clear' %}"></div>
+<div class="{% cycle 'basic-clear': '', '', '', '', 'five-column-clear' %}"></div>
+{% endif %}
+{% endfor %}
+</div>
+{% endif %}
+
+<!-- theme -->
+{% if theme %}
+<hr class="example-section-break">
+<h4 class="example-section-title" id="theme">
+<a class="no_underline plot-blue" href="#theme">theme</a>
+</h4>
+<div class="row">
+{% for page in languagelistimg %}
+{% if page.display_as == "theme" %}
 <a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
   <div class="alltutcol">
     <img class="thumbnail" alt="{{page.name}}" src="{{site.imgurl}}{{page.thumbnail}}">
