add/fix ggplot2 link

--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -109,10 +109,11 @@
 		  <a href="{{ BASE_URL }}/python/matplotlib-to-plotly-tutorial/" class="js-splash--navigation-item">User Guide</a>
 		{% endif %}
 
-
-        <!-- Shiny Tutorial -->
+        <!-- GGPlot2 Tutorials -->
 		{% if page.language == "r"%}
-		  <a href="{{ BASE_URL }}/{{ page.language }}/ggplot2/" class="js-splash--navigation-item">GGPlot2</a>
+		  <a href="{{ BASE_URL }}/ggplot2/" class="js-splash--navigation-item">GGPlot2</a>
+
+		<!-- Shiny Tutorial -->
 		  <a href="{{ BASE_URL }}/{{ page.language }}/shiny-tutorial/" class="js-splash--navigation-item">Shiny Tutorial</a>
 		{% endif %}
 
