--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -37,9 +37,9 @@
 	{% elsif page.display_as == "other" %}
 		{% assign other = true %}
 	{% elsif page.display_as == "theme" %}
-		{% assign theme = true %}	
-	<!-- END OF GGPLOT CUSTOM LAYOUT -->	
-	
+		{% assign theme = true %}
+	<!-- END OF GGPLOT CUSTOM LAYOUT -->
+
 	{% endif %}
 {% endfor %}
 
@@ -390,6 +390,8 @@
 		</div>
 	</div>
 </a>
+<div class="{% cycle 'databases-three-clear': '', '', 'three-column-clear' %}"></div>
+<div class="{% cycle 'databases-clear': '', '', '', '', 'five-column-clear' %}"></div>
 {% endif %}
 {% endfor %}
 </div>
