--- a/_includes/dashboard-nav.html
+++ b/_includes/dashboard-nav.html
@@ -7,10 +7,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="https://plot.ly/{{page.language | capitalize}}/">
+      <a class="navbar-brand" href="https://plot.ly/{{page.language | downcase}}/">
         <span class="glyphicon glyphicon-chevron-left" style="color:white;"></span>
       </a>
-      <a class="navbar-brand" href="https://plot.ly/{{page.language | capitalize}}/">
+      <a class="navbar-brand" href="https://plot.ly/{{page.language | downcase}}/">
         <h1 class="dash-title dash-title-languages" style="color:white;">{{page.language | capitalize}} Dashboards</h1>
       </a>      
     </div>
@@ -41,9 +41,9 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">REST API <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="https://plot.ly/{{page.language | capitalize}}/sending-data-to-charts/#overwrite-chart-data-with-new-data">Overwrite chart data</a></li>
-            <li><a href="https://plot.ly/{{page.language | capitalize}}/sending-data-to-charts/#add-data-to-an-existing-trace">Add data to a trace</a></li>
-            <li><a href="https://plot.ly/{{page.language | capitalize}}/sending-data-to-charts/#add-new-traces-to-a-chart">Add new traces</a></li>
+            <li><a href="https://plot.ly/{{page.language | downcase}}/sending-data-to-charts/#overwrite-chart-data-with-new-data">Overwrite chart data</a></li>
+            <li><a href="https://plot.ly/{{page.language | downcase}}/sending-data-to-charts/#add-data-to-an-existing-trace">Add data to a trace</a></li>
+            <li><a href="https://plot.ly/{{page.language | downcase}}/sending-data-to-charts/#add-new-traces-to-a-chart">Add new traces</a></li>
           </ul>
         </li>
               
