Some minor changes to ggplot2 doc
- Fixed #293
- Fixed side bar ggplot2 caps issue on main landing page for R

--- a/_includes/lang-splash-banner.html
+++ b/_includes/lang-splash-banner.html
@@ -16,7 +16,16 @@
             <h5 style="font-size:30px; color: rgb(255,255,255);">The open source JavaScript graphing library that powers plotly</h5>
     {% elsif page.title == "Plot Twist" %}
             <h5 style="font-size:30px; color: rgb(255,255,255);">Plot Twist</h5>
-
+	
+	<!--Custom for ggplot2--> 
+	{% elsif page.language == "ggplot2" %}
+        <div style="padding-top: 30px;">
+          <h6 style="font-size:30px; color: rgb(255,255,255);">Plotly for ggplot2 is now entirely open source, free, and self-hosted</h6>
+          <h5 style="font-size:30px; color: rgb(255,255,255);" style="text-align: center;">
+            Learn more about <a style="color: #ABB9D2;" href="https://plot.ly/javascript/open-source-announcement">why we've open sourced</a>
+          </h5>
+        </div>
+    			
     {% else %}
         <div style="padding-top: 30px;">
           <h6 style="font-size:30px; color: rgb(255,255,255);">Plotly for {{ page.language | capitalize }} is now entirely open source, free, and self-hosted</h6>
