--- a/_includes/side-bar.html
+++ b/_includes/side-bar.html
@@ -111,7 +111,7 @@
 
         <!-- GGPlot2 Tutorials -->
 		{% if page.language == "r"%}
-		  <a href="{{ BASE_URL }}/ggplot2/" class="js-splash--navigation-item">GGPlot2</a>
+		  <a href="{{ BASE_URL }}/ggplot2/" class="js-splash--navigation-item">ggplot2</a>
 
 		<!-- Shiny Tutorial -->
 		  <a href="{{ BASE_URL }}/{{ page.language }}/shiny-tutorial/" class="js-splash--navigation-item">Shiny Tutorial</a>
