--- a/all_static/css/base.css
+++ b/all_static/css/base.css
@@ -390,7 +390,11 @@ code {
 pre > code {
   display: block;
   padding: 1rem 1.5rem;
-  white-space: pre; }
+  white-space: pre; 
+  font-size: 13px;
+  padding: 20px !important;
+  line-height: 14px;
+}
 
 
 /* Tables
