--- a/all_static/css/ipython-notebook-custom.css
+++ b/all_static/css/ipython-notebook-custom.css
@@ -92,6 +92,19 @@ div.input_area>div.highlight>pre {
     margin: 0;
 }
 
+.cell h1:hover .anchor-link,
+.cell h2:hover .anchor-link,
+.cell h3:hover .anchor-link,
+.cell h4:hover .anchor-link,
+.cell h5:hover .anchor-link,
+.cell h6:hover .anchor-link {
+    visibility: visible;
+}
+
+.cell a.anchor-link:link {
+    visibility: hidden;
+}
+
 .cell div.text_cell_render{
     font-family: "Open sans",verdana,arial,sans-serif;
     line-height: 110%;
