removed link from .cell a.anchor-link:link

--- a/all_static/css/ipython-notebook-custom.css
+++ b/all_static/css/ipython-notebook-custom.css
@@ -101,7 +101,7 @@ div.input_area>div.highlight>pre {
     visibility: visible;
 }
 
-.cell a.anchor-link:link {
+.cell a.anchor-link {
     visibility: hidden;
 }
 
