Changed Side bar, and added thumbnails for layout options

--- a/_includes/documentation_eg.html
+++ b/_includes/documentation_eg.html
@@ -26,6 +26,10 @@
 		{% assign report_generation = true %}
 	{% elsif page.display_as == "databases" %}
 		{% assign databases = true %}
+    <!-- For GGPlot2 -->
+	{% elsif page.display_as == "layout_opt" and page.language == "ggplot2" %}
+		{% assign layout_options_ggplot = true %}
+
 	{% endif %}
 {% endfor %}
 
@@ -370,6 +374,31 @@ All Plotly charts have click, hover and zoom events exposed to add custom contro
 </ul>
 </div>
 </div>
+
+{% else %}
+
+{% if layout_options_ggplot %}
+<hr class="example-section-break">
+<h4 class="example-section-title" id="layout-options">
+<a class="no_underline plot-blue" href="#layout-options">Layout Options</a>
+</h4>
+<div class="row">
+{% for page in languagelistimg %}
+{% if page.display_as == "layout_opt" %}
+<a href="{% if page.permalink contains 'http' %}{{page.permalink}}{% else %}/{{page.permalink}}{% endif %}">
+  <div class="alltutcol">
+    <img class="thumbnail" alt="{{page.name}}" src="{{site.imgurl}}{{page.thumbnail}}">
+      <div class="titlecenter">
+        <h5 class="centered"> {{page.name}} </h5>
+      </div>
+  </div>
+</a>
+<div class="{% cycle 'layout-ggplot-three-clear': '', '', 'three-column-clear' %}"></div>
+<div class="{% cycle 'layout-ggplot-clear': '', '', '', '', 'five-column-clear' %}"></div>
+{% endif %}
+{% endfor %}
+</div>
+{% endif %}
 
 {% else %}
 
