--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-<div class="plotly-footer">
+<div class="plotly-footer" id="footer">
 	{% include plotly_offline_cta.html %}
 	<div class="row footerarea footer-top" style="z-index: 100; position: relative;">
 		<div class="one column footcolumn space"> </div>
